apps/searxng/service-searxng.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng
  namespace: searxng
spec:
  selector:
    app: searxng
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
