apps/searxng/service-valkey.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: searxng
spec:
  selector:
    app: valkey
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
